--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -538,7 +538,13 @@ limitations under the License. -->
   <string name="calc_prog_headline">AI prog</string>
   <string name="calc_format_radian">Radian/Degree</string>
   <string name="calc_format_radian_desc">Use 2π instead of 360° for trigonometric functions.</string>
-  <string name="calc_desc">Result description:</string>
+  <string name="calc_display_name">Display name:</string>
   <string name="calc_code">AI code</string>
   <string name="execute">Execute</string>
+  <string name="export_code">Export AI</string>
+  <string name="export_code_desc">Exports the custom function code as a .json file.</string>
+  <string name="import_code">Import AI</string>
+  <string name="import_code_desc">Import function code from a .json file.</string>
+  <string name="load_code_msg">The AI code was loaded.</string>
+  <string name="save_code_msg">The AI code was saved to a .json file.</string>
 </resources>
