--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -152,17 +152,17 @@ limitations under the License. -->
   <string name="remove_quantity_exceeds_total_quantity">Die Anzahl muss kleiner als die Gesamtanzahl sein.</string>
   <string name="dividend_in_list">Dividende:</string>
   <string name="standard_group">Nicht zugeordnet</string>
-  <string name="import_section_header">Importieren</string>
-  <string name="button_import">Importieren</string>
-  <string name="import_list_desc">Wertpapierliste von einer Text-Datei, CSV-Datei oder JSON-Datei importieren.</string>
-  <string name="import_error">Die ausgewählte Datei konnte nicht importiert werden.\n%1$s</string>
+  <string name="import_section_header">Laden</string>
+  <string name="button_import">Laden</string>
+  <string name="import_list_desc">Wertpapierliste von einer Text-Datei, CSV-Datei oder JSON-Datei laden.</string>
+  <string name="import_error">Die ausgewählte Datei konnte nicht geladen werden.\n%1$s</string>
   <string name="import_mimetype_error">Der Medientyp \'%1$s\' wird nicht unterstützt.</string>
-  <string name="import_csv_column_error">Die ausgewählte CSV-Datei konnte nicht importiert werden. Die Spalte \'%1$s\' ist nicht vorhanden.</string>
-  <string name="import_msg">%1$s Wertpapiere wurden importiert</string>
-  <string name="export_msg">Ihre Wertpapierliste mit %1$d Wertpapierdaten wurde in eine .JSON-Datei exportiert.</string>
-  <string name="export_list">Wertpapierliste Exportieren</string>
-  <string name="export_list_desc">Wertpapierliste ihres Portfolios in eine .JSON-Datei exportieren.</string>
-  <string name="export_error">Ein Fehler beim Export ist aufgetreten:\n%1$s</string>
+  <string name="import_csv_column_error">Die ausgewählte CSV-Datei konnte nicht geladen werden. Die Spalte \'%1$s\' ist nicht vorhanden.</string>
+  <string name="import_msg">%1$s Wertpapiere wurden geladen</string>
+  <string name="export_msg">Ihre Wertpapierliste mit %1$d Wertpapierdaten wurde in eine .JSON-Datei gespeichert.</string>
+  <string name="export_list">Wertpapierliste speichern</string>
+  <string name="export_list_desc">Wertpapierliste ihres Portfolios in eine .JSON-Datei speichern.</string>
+  <string name="export_error">Ein Fehler beim Speichern ist aufgetreten:\n%1$s</string>
   <string name="export_select_file">Wählen Sie eine Datei aus</string>
   <string name="import_select_file">Wählen Sie eine Datei aus</string>
   <string name="delete_stock">Sind Sie sicher dass sie das Wertpapier \'%1$s\' entfernen möchten?</string>
@@ -540,10 +540,10 @@ limitations under the License. -->
   <string name="calc_display_name">Anzeigename:</string>
   <string name="calc_code">AI code</string>
   <string name="execute">Ausführen</string>
-  <string name="export_code">Export AI</string>
-  <string name="export_code_desc">Exports the custom function code as a .json file.</string>
-  <string name="import_code">Import AI</string>
-  <string name="import_code_desc">Import function code from a .json file.</string>
-  <string name="load_code_msg">Der AI code wurde geladen.</string>
+  <string name="export_code">AI speichern</string>
+  <string name="export_code_desc">AI code in eine .JSON-Datei speichern.</string>
+  <string name="import_code">AI laden</string>
+  <string name="import_code_desc">AI code von einer JSON-Datei laden.</string>
+  <string name="load_code_msg">Der AI code wurde von einer .JSON-Datei geladen.</string>
   <string name="save_code_msg">Der AI code wurde in eine .JSON-Datei gespeichert.</string>
 </resources>
