--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -542,9 +542,9 @@ limitations under the License. -->
   <string name="calc_code">AI code</string>
   <string name="execute">Execute</string>
   <string name="export_code">Export AI</string>
-  <string name="export_code_desc">Exports the custom function code as a .json file.</string>
+  <string name="export_code_desc">Exports the AI code as a .json file.</string>
   <string name="import_code">Import AI</string>
-  <string name="import_code_desc">Import function code from a .json file.</string>
+  <string name="import_code_desc">Import AI code from a .json file.</string>
   <string name="load_code_msg">The AI code was loaded.</string>
   <string name="save_code_msg">The AI code was saved to a .json file.</string>
 </resources>
