--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -550,18 +550,18 @@ limitations under the License. -->
   <string name="calc_invalid_args">Missing numbers.</string>
   <string name="calc_error_msg">Error at symbol \'%1$s\'.</string>
   <string name="calc_error_parsing_msg">Error parsing \'%1$s\'.</string>
-  <string name="calc_F1_code">//∆% = 100 * (b - a) / a\nover - swap / 100 *\n\n// add ∆% to result\n\"∆% \"</string>
+  <string name="calc_F1_code">//∆% = 100 * (b - a) / a\nover - swap / 100 * round\n\n// add ∆% to result\n\"∆% \"</string>
   <string name="calc_F1_desc">∆%</string>
-  <string name="calc_F2_code">// Mortgage Calculator\n// Monthly Payment\n\n// 3: Loan Amount\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / dup 1 + rot -12 * ^ 1 swap - / * \"Monthly Payment \"</string>
+  <string name="calc_F2_code">// Mortgage Calculator\n// Monthly Payment\n\n// 3: Loan Amount\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / dup 1 + rot -12 * ^ 1 swap - / * round \"Monthly Payment \"</string>
   <string name="calc_F2_desc">Monthly Payment</string>
-  <string name="calc_F3_code">// Mortgage Calculator\n// Loan Amount\n\n// 3: Monthly Payment\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / rot over / rot rot 1 + swap -12 * ^ 1 swap - * \"Loan Amount \"</string>
+  <string name="calc_F3_code">// Mortgage Calculator\n// Loan Amount\n\n// 3: Monthly Payment\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / rot over / rot rot 1 + swap -12 * ^ 1 swap - * round \"Loan Amount \"</string>
   <string name="calc_F3_desc">Loan Amount</string>
-  <string name="calc_F4_code">// Mortgage Calculator\n// Loan Term in Years\n\n// 3: Loan Amount\n// 2: Monthly Payment\n// 1: Annual Interest Rate in %\n\n1200 / rot rot / over * 1 swap - ln swap 1 + ln / -12 / \"Loan Term in Years \"</string>
+  <string name="calc_F4_code">// Mortgage Calculator\n// Loan Term in Years\n\n// 3: Loan Amount\n// 2: Monthly Payment\n// 1: Annual Interest Rate in %\n\n1200 / rot rot / over * 1 swap - ln swap 1 + ln / -12 / round \"Loan Term in Years \"</string>
   <string name="calc_F4_desc">Loan Term</string>
   <string name="calc_F5_code">// Quadratic Equation\n// x²+ax+b\n\nswap -2 / dup dup * rot - sqrt over over + \"x₁=\" rot rot - \"x₂=\"</string>
   <string name="calc_F5_desc">x²+ax+b</string>
-  <string name="calc_F6_code"></string>
-  <string name="calc_F6_desc"></string>
+  <string name="calc_F6_code">// $$ gets the stock price\n\n$$tsla\ndup 10000 swap / int \"For 10000 you can buy \"</string>
+  <string name="calc_F6_desc">Stock price</string>
   <string name="calc_F7_code"></string>
   <string name="calc_F7_desc"></string>
   <string name="calc_F8_code"></string>
