--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -550,21 +550,21 @@ limitations under the License. -->
   <string name="calc_invalid_args">Missing numbers.</string>
   <string name="calc_error_msg">Error at symbol \'%1$s\'.</string>
   <string name="calc_error_parsing_msg">Error parsing \'%1$s\'.</string>
-  <string name="calc_F1_code">// ∆%\n\n// 2: a\n// 1: b\n//∆% \u003d 100 * (b - a) / a\nover - swap / 100 *\n\n//round to two digits\nround\n\n// add \"∆% \" to result\n\"∆% \"</string>
+  <string name="calc_F1_code">// ∆%\n\n// 2: a\n// 1: b\n//∆% \u003d 100 * (b - a) / a\nover - swap / 100 *\n\n//round to two digits\nround\n\n// add \"∆% \" to result\n\"∆% \" +</string>
   <string name="calc_F1_desc">∆% .2</string>
-  <string name="calc_F2_code">// Mortgage Calculator\n// Monthly Payment\n\n// 3: Loan Amount\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / dup 1 + rot -12 * ^ 1 swap - / * round \"Monthly Payment \"</string>
+  <string name="calc_F2_code">// Mortgage Calculator\n// Monthly Payment\n\n// 3: Loan Amount\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / dup 1 + rot -12 * ^ 1 swap - / * round \"Monthly Payment \" +</string>
   <string name="calc_F2_desc">Monthly Payment</string>
-  <string name="calc_F3_code">// Mortgage Calculator\n// Loan Amount\n\n// 3: Monthly Payment\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / rot over / rot rot 1 + swap -12 * ^ 1 swap - * round \"Loan Amount \"</string>
+  <string name="calc_F3_code">// Mortgage Calculator\n// Loan Amount\n\n// 3: Monthly Payment\n// 2: Loan Term in Years\n// 1: Annual Interest Rate in %\n\n1200 / rot over / rot rot 1 + swap -12 * ^ 1 swap - * round \"Loan Amount \" +</string>
   <string name="calc_F3_desc">Loan Amount</string>
-  <string name="calc_F4_code">// Mortgage Calculator\n// Loan Term in Years\n\n// 3: Loan Amount\n// 2: Monthly Payment\n// 1: Annual Interest Rate in %\n\n1200 / rot rot / over * 1 swap - ln swap 1 + ln / -12 / round \"Loan Term in Years \"</string>
+  <string name="calc_F4_code">// Mortgage Calculator\n// Loan Term in Years\n\n// 3: Loan Amount\n// 2: Monthly Payment\n// 1: Annual Interest Rate in %\n\n1200 / rot rot / over * 1 swap - ln swap 1 + ln / -12 / round \"Loan Term in Years \" +</string>
   <string name="calc_F4_desc">Loan Term</string>
-  <string name="calc_F5_code">// Quadratic Equation\n// x²+ax+b\n\nswap -2 / dup dup * rot - sqrt over over + \"x₁=\" rot rot - \"x₂=\"</string>
+  <string name="calc_F5_code">// Quadratic Equation\n// x²+ax+b\n\nswap -2 / dup dup * rot - sqrt over over + \"x₁=\" + rot rot - \"x₂=\" +</string>
   <string name="calc_F5_desc">x²+ax+b</string>
-  <string name="calc_F6_code">// $$ gets the stock price\n\n$$tsla\ndup 10000 swap / int \"For 10000 you can buy \"</string>
+  <string name="calc_F6_code">// $$ gets the stock price\n\n$$tsla\ndup 10000 swap / int \"For 10000 you can buy \" +</string>
   <string name="calc_F6_desc">Stock price</string>
   <string name="calc_F7_code"> // stock evaluation example\n\n$$tsla\n$$tsla.marketprice\n$$tsla.purchaseprice\n$$tsla.quantity\n$$tsla.marketchange\n$$tsla.marketchangepercent\n$$tsla.name\n$$tsla.currency\n$$tsla.annualdividendrate"</string>
   <string name="calc_F7_desc">TSLA</string>
-  <string name="calc_F8_code">// if conditional example (aiaman)\n\n// 4: else part\n// 3: then part\n// 2: conditional op2\n// 1: conditional op1\n\n// if equal (op2 == op1)?\n// result is 4, not equal\n4 \"false \" 3 \"true \" 2 1 if.eq\n\n// if greater than (op2 \u003e op1)?\n// result is 3, greater than\n4 \"false \" 3 \"true \" 2 1 if.gt\n\n// if less than (op2 \u003c op1)?\n// result is 4, not less than\n4 \"false \" 3 \"true \" 2 1 if.lt</string>
+  <string name="calc_F8_code">// if conditional example (aiaman)\n\n// 4: else part\n// 3: then part\n// 2: conditional op2\n// 1: conditional op1\n\n// if equal (op2 == op1)?\n// result is 4, not equal\n4 \"false \" + 3 \"true \" + 2 1 if.eq\n\n// if greater than (op2 \u003e op1)?\n// result is 3, greater than\n4 \"false \" + 3 \"true \" + 2 1 if.gt\n\n// if less than (op2 \u003c op1)?\n// result is 4, not less than\n4 \"false \" + 3 \"true \" + 2 1 if.lt</string>
   <string name="calc_F8_desc">if example</string>
   <string name="calc_F9_code"></string>
   <string name="calc_F9_desc"></string>
