--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -573,4 +573,8 @@ limitations under the License. -->
   <string name="calc_F11_desc"></string>
   <string name="calc_F12_code"></string>
   <string name="calc_F12_desc"></string>
+  <string name="calc_endless_loop">Endlosschleife erkannt. Vorgang abgebrochen.</string>
+  <string name="calc_missing_label">Fehlende Marke \'%1$s\'</string>
+  <string name="calc_invalid_while_args">Fehlende Zahlen für \'while\'.</string>
+  <string name="calc_unknown_while_condition">Unbekannte while-Bedingung \'%1$s\'. Verwende while.gt, while.lt oder while.eq.</string>
 </resources>
