--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -574,7 +574,7 @@ limitations under the License. -->
   <string name="calc_F11_desc"></string>
   <string name="calc_F12_code"></string>
   <string name="calc_F12_desc"></string>
-  <string name="calc_endless_loop">Endless loop detected. Task stopped.</string>
+  <string name="calc_endless_loop">Possible endless loop. Task stopped.</string>
   <string name="calc_missing_label">Missing label \'%1$s\'</string>
   <string name="calc_invalid_while_args">Missing numbers for \'while\'.</string>
   <string name="calc_unknown_while_condition">Unknown while condition \'%1$s\'. Use while.gt, while.lt or while.eq.</string>
