--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -577,5 +577,5 @@ limitations under the License. -->
   <string name="calc_endless_loop">Possible endless loop. Task stopped.</string>
   <string name="calc_missing_label">Missing label \'%1$s\'</string>
   <string name="calc_invalid_while_args">Missing numbers for \'while\'.</string>
-  <string name="calc_unknown_while_condition">Unknown while condition \'%1$s\'. Use while.gt, while.lt or while.eq.</string>
+  <string name="calc_unknown_while_condition">Unknown while condition \'%1$s\'. Use while.[eq ge gt le lt].</string>
 </resources>
